@@ -16,11 +16,15 @@
 
 package com.android.server.broadcastradio;
 
+import static com.android.dx.mockito.inline.extended.ExtendedMockito.doReturn;
+
 import static com.google.common.truth.Truth.assertWithMessage;
 
+import static org.junit.Assert.assertThrows;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
-import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -31,29 +35,37 @@ import android.hardware.radio.ICloseHandle;
 import android.hardware.radio.ITuner;
 import android.hardware.radio.ITunerCallback;
 import android.hardware.radio.RadioManager;
+import android.os.Build;
+import android.os.IBinder;
+import android.os.ServiceManager;
 
+import com.android.dx.mockito.inline.extended.StaticMockitoSessionBuilder;
 import com.android.server.broadcastradio.aidl.BroadcastRadioServiceImpl;
 
 import org.junit.Before;
 import org.junit.Test;
-import org.junit.runner.RunWith;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
 
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * Tests for {@link android.hardware.radio.IRadioService} with AIDL HAL implementation
  */
-@RunWith(MockitoJUnitRunner.class)
-public final class IRadioServiceAidlImplTest {
+public final class IRadioServiceAidlImplTest extends ExtendedRadioMockitoTestCase {
 
     private static final int[] ENABLE_TYPES = new int[]{Announcement.TYPE_TRAFFIC};
+    private static final String AM_FM_SERVICE_NAME =
+            "android.hardware.broadcastradio.IBroadcastRadio/amfm";
+    private static final String DAB_SERVICE_NAME =
+            "android.hardware.broadcastradio.IBroadcastRadio/dab";
+    private static final int TARGET_SDK_VERSION = Build.VERSION_CODES.CUR_DEVELOPMENT;
 
     private IRadioServiceAidlImpl mAidlImpl;
 
     @Mock
     private BroadcastRadioService mServiceMock;
+    @Mock
+    private IBinder mServiceBinderMock;
     @Mock
     private BroadcastRadioServiceImpl mHalMock;
     @Mock
@@ -73,28 +85,53 @@ public final class IRadioServiceAidlImplTest {
     public void setUp() throws Exception {
         doNothing().when(mServiceMock).enforcePolicyAccess();
 
-        when(mHalMock.listModules()).thenReturn(Arrays.asList(mModuleMock));
-        when(mHalMock.openSession(anyInt(), any(), anyBoolean(), any()))
+        when(mHalMock.listModules()).thenReturn(List.of(mModuleMock));
+        when(mHalMock.openSession(anyInt(), any(), anyBoolean(), any(), eq(TARGET_SDK_VERSION)))
                 .thenReturn(mTunerMock);
         when(mHalMock.addAnnouncementListener(any(), any())).thenReturn(mICloseHandle);
 
         mAidlImpl = new IRadioServiceAidlImpl(mServiceMock, mHalMock);
     }
 
+    @Override
+    protected void initializeSession(StaticMockitoSessionBuilder builder) {
+        builder.spyStatic(ServiceManager.class);
+    }
+
+    @Test
+    public void getServicesNames_forAidlImpl() {
+        doReturn(null).when(() -> ServiceManager.waitForDeclaredService(
+                AM_FM_SERVICE_NAME));
+        doReturn(mServiceBinderMock).when(() -> ServiceManager.waitForDeclaredService(
+                DAB_SERVICE_NAME));
+
+        assertWithMessage("Names of services available")
+                .that(IRadioServiceAidlImpl.getServicesNames()).containsExactly(DAB_SERVICE_NAME);
+    }
+
     @Test
     public void loadModules_forAidlImpl() {
         assertWithMessage("Modules loaded in AIDL HAL")
-                .that(mAidlImpl.listModules())
-                .containsExactly(mModuleMock);
+                .that(mAidlImpl.listModules()).containsExactly(mModuleMock);
     }
 
     @Test
     public void openTuner_forAidlImpl() throws Exception {
         ITuner tuner = mAidlImpl.openTuner(/* moduleId= */ 0, mBandConfigMock,
-                /* withAudio= */ true, mTunerCallbackMock);
+                /* withAudio= */ true, mTunerCallbackMock, TARGET_SDK_VERSION);
 
         assertWithMessage("Tuner opened in AIDL HAL")
                 .that(tuner).isEqualTo(mTunerMock);
+    }
+
+    @Test
+    public void openTuner_withNullCallbackForAidlImpl_fails() throws Exception {
+        IllegalArgumentException thrown = assertThrows(IllegalArgumentException.class,
+                () -> mAidlImpl.openTuner(/* moduleId= */ 0, mBandConfigMock,
+                        /* withAudio= */ true, /* callback= */ null, TARGET_SDK_VERSION));
+
+        assertWithMessage("Exception for opening tuner with null callback")
+                .that(thrown).hasMessageThat().contains("Callback must not be null");
     }
 
     @Test
@@ -105,5 +142,4 @@ public final class IRadioServiceAidlImplTest {
         assertWithMessage("Close handle of announcement listener for HAL 2")
                 .that(closeHandle).isEqualTo(mICloseHandle);
     }
-
 }
